[tool.poetry]
name = "lap"
version = "0.5.dev0"
description = "Linear Assignment Problem solver (LAPJV/LAPMOD)."
authors = ["Tomas Kazmar <tomash.kazmar@seznam.cz>"]
license = "BSD (2-clause)"

[tool.poetry.dependencies]
python = ">=2.7,<3.0.0 || >=3.7,<4.0"
numpy = ">=1.10.1"
Cython = ">=0.29.13"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
